[package]
name = "ass-cli"
version = "0.2.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]
description = "A small CLI tool for working with Aptoma Smooth Storage"
edition = "2018"
license = "MIT"
repository = "https://github.com/mipli/ass-cli"
readme = "README.md"
keywords = []

[dependencies]
clap = "2.33.0"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.36"
termcolor = "1.0.4"
dirs = "1.0.4"
derive_more = "0.15.*"
ass-rs = "2.0.0"
