[package]
name = "ass-cli"
version = "1.0.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]
description = "A small CLI tool for working with Aptoma Smooth Storage"
edition = "2018"
license = "MIT"
repository = "https://github.com/mipli/ass-cli"
readme = "README.md"
keywords = []

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.36"
termcolor = "1.0.4"
dirs = "1.0.4"
derive_more = "0.15"
ass-rs = "3.0.0"
tokio = { version = "1.8", features = ["full"] }
